--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "chalk": "^4.1.0",
     "cookie-parser": "^1.4.5",
+    "dotenv": "^8.2.0",
     "ejs": "^3.1.3",
     "express": "^4.17.1",
     "express-fileupload": "^1.1.7-alpha.4",
@@ -28,7 +29,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "set DEBUG=app:* & nodemon index.js"
   },
-  "author": "",
+  "author": "Nati",
   "license": "ISC",
   "description": ""
 }
