--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "passport-local": "^1.0.0",
     "path": "^0.12.7",
     "postman": "^0.2.0",
-    "schema": "^0.2.1"
+    "schema": "^0.2.1",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {},
   "scripts": {
