--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "^4.17.1",
     "express-fileupload": "^1.1.7-alpha.4",
     "express-session": "^1.17.1",
+    "heroku": "^7.54.0",
     "kosher-zmanim": "^0.6.1",
     "mongodb": "^3.5.8",
     "mongoose": "^5.12.12",
