--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "set DEBUG=app:* & nodemon index.js"
+    "start": "index.js",
+    "start-dev": "set DEBUG=app:* & nodemon index.js"
   },
   "author": "Nati",
   "license": "ISC",
