--- a/package.json
+++ b/package.json
@@ -23,18 +23,17 @@
     "path": "^0.12.7",
     "schema": "^0.2.1",
     "urijs": "^1.19.6",
-    "uuid": "^8.3.2"
-  },
-  "devDependencies": {
+    "uuid": "^8.3.2",
     "postman": "^0.2.0",
     "morgan": "^1.10.0",
     "debug": "^4.3.1",
     "nodemon": "^2.0.4"
   },
+  "devDependencies": {
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js",
-    "start-dev": "set DEBUG=app:* & nodemon index.js"
+    "start": "set DEBUG=app:* & nodemon index.js"
   },
   "author": "Nati",
   "license": "ISC",
