--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "chalk": "^4.1.0",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
+    "debug": "^4.3.1",
     "dotenv": "^8.2.0",
     "ejs": "^3.1.3",
     "express": "^4.17.1",
@@ -16,21 +17,17 @@
     "kosher-zmanim": "^0.6.1",
     "mongodb": "^3.5.8",
     "mongoose": "^5.12.12",
-    "node-forge": "^0.10.0",
+    "morgan": "^1.10.0",
     "nodemailer": "^6.6.1",
+    "nodemon": "^2.0.4",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "path": "^0.12.7",
-    "schema": "^0.2.1",
-    "urijs": "^1.19.6",
-    "uuid": "^8.3.2",
     "postman": "^0.2.0",
-    "morgan": "^1.10.0",
-    "debug": "^4.3.1",
-    "nodemon": "^2.0.4"
+    "schema": "^0.2.1",
+    "uuid": "^8.3.2"
   },
-  "devDependencies": {
-  },
+  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "set DEBUG=app:* & nodemon index.js"
