--- a/package.json
+++ b/package.json
@@ -13,10 +13,9 @@
     "express": "^4.17.1",
     "express-fileupload": "^1.1.7-alpha.4",
     "express-session": "^1.17.1",
-    "heroku": "^7.60.2",
     "kosher-zmanim": "^0.6.1",
-    "mongodb": "^3.5.8",
-    "mongoose": "^6.3.1",
+    "mongodb": "^6.5.0",
+    "mongoose": "^8.2.3",
     "morgan": "^1.10.0",
     "nodemailer": "^6.6.1",
     "nodemon": "^2.0.4",
@@ -28,10 +27,10 @@
     "schema": "^0.2.1",
     "uuid": "^8.3.2"
   },
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "set DEBUG=app:* & nodemon index.js"
+    "start": "set ENV=production& node index.js",
+    "start-dev": "set ENV=development& set DEBUG=app:*& nodemon index.js"
   },
   "author": "Nati",
   "license": "ISC",
